--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Thème Abyssal pour le client DOFUS 2.5x.
+Thèmes d'interface pour le client DOFUS PC. Mis à jour lors de chaque mise à jour majeur du jeu.
 
 En cas de problème, me retrouver sur Twitter : @SalakissODV ou sur JeuxOnline : Salakiss.
