--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Thèmes d'interface pour le client DOFUS PC. Mis à jour lors de chaque mise à jour majeur du jeu.
+# THÈMES D'INTERFACE POUR DOFUS PC
 
-En cas de problème, me retrouver sur Twitter : @SalakissODV ou sur JeuxOnline : Salakiss.
+En cas de problème ou suggestion, n'hésitez pas à me contacter sur Twitter : @SalakissODV ou sur JeuxOnLine.info via MP : Salakiss .
