--- a/README.mkd
+++ b/README.mkd
@@ -1,3 +1,3 @@
 # THÈMES D'INTERFACE POUR DOFUS PC
 
-En cas de problème ou suggestion, n'hésitez pas à me contacter sur Twitter : @SalakissODV ou sur JeuxOnLine.info via MP : Salakiss .
+En cas de problème ou suggestion, n'hésitez pas à me contacter sur Twitter : @SalakissODV ou sur JeuxOnLine.info via MP : Salakiss
